--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ logo                     : #"https://github.com/adamlawson99/adamlawson99.github
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
-og_image                 : https://github.com/adamlawson99/adamlawson99.github.io/raw/master/assets/images/computer.png
+og_image                 : "assests/images/computer.png"
 
 # Build settings
 markdown: kramdown
