--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title_separator          : "-"
 subtitle                 : "Software Engineer"
 name                     : "Adam Lawson"
 description              : "Adam Lawson's personal developer portfolio. You'll find skills, work experience, projects and more!"
-url                      : "https://adamlawson99.github.io/"
+url                      : "adamlawson.dev"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "adamlawson99/adamlawson99.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
