--- a/_config.yml
+++ b/_config.yml
@@ -51,10 +51,8 @@ og_image                 : # Open Graph/Twitter default site image
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-167179912-1"
-    anonymize_ip         : true
+  provider               : "custom" # false (default), "google", "google-universal", "custom"
+
 
 # Build settings
 markdown: kramdown
