Update photo, add work experience:

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   name             : "Adam Lawson"
   avatar           :  "assets/images/me.jpg"
   bio              : "Passionate software engineer"
-  location         : "Ottawa, Canada"
+  location         : "Vancouver, Canada"
   email            :
   links:
     - label: "Email"
